tests/machine/x/pl/fun_expr_in_let.out
ERROR: /workspace/mochi/tests/machine/x/pl/fun_expr_in_let.pl:2:10: Syntax error: Operator expected
ERROR: /workspace/mochi/tests/machine/x/pl/fun_expr_in_let.pl:8:9: Syntax error: Operator expected

